# cant-believe-its-not-ebis

./: CLAUDE.md  Makefile  README.md
app/api/: .env.example  README.md  conftest.py  main.py  pyproject.toml
app/api/core/: __init__.py  audit.py  auth.py  config.py  context.py  database.py  middleware.py
app/api/core/audit/: README.md
app/api/crud/: README.md  __init__.py  aircraft.py  city.py  customer.py  dashboard.py  labor_kit.py  labor_kit_item.py  tool.py  tool_room.py  work_order.py  work_order_item.py
app/api/models/: __init__.py  aircraft.py  aircraft_customer.py  audit_log.py  base.py  city.py  customer.py  labor_kit.py  labor_kit_item.py  tool.py  tool_room.py  work_order.py  work_order_item.py
app/api/routers/: __init__.py  aircraft.py  audit.py  cities.py  customers.py  dashboard.py  labor_kit_items.py  labor_kits.py  tool_rooms.py  tools.py  work_order_items.py  work_orders.py
app/api/schemas/: README.md  __init__.py  aircraft.py  audit.py  city.py  customer.py  dashboard.py  labor_kit.py  labor_kit_item.py  tool.py  tool_room.py  work_order.py  work_order_item.py
app/api/tests/: README.md  conftest.py
app/api/tests/factories/: __init__.py  aircraft.py  city.py  labor_kit.py  labor_kit_item.py  work_order.py  work_order_item.py
app/api/tests/integration/: test_aircraft_customers_api.py  test_apply_labor_kit.py  test_audit_api.py  test_audit_capture.py  test_audit_e2e.py  test_audit_retrieval.py  test_cities_api.py  test_customers_api.py  test_labor_kits_api.py  test_tool_rooms_api.py  test_tools_api.py  test_work_order_items_api.py  (+1 more)
(+199 files in other folders)
